<?xml version="1.0"?>
<package format="3">
  <name>navio2_ros</name>
  <version>0.1.0</version>
  <description>ROS2 interface for Navio2 board</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
